done js_array_objects

--- a/1. objects/1.md
+++ b/1. objects/1.md
@@ -2,72 +2,111 @@
 
 ```js
 // your code goes here
+let myPenguin = {
+    Name : "Tacky the Penguin";
+    Origin : "Tacky the Penguin";
+    Author : "Helen Lester";
+    Notes : "A penguin who does things differently than other penguins."
+}
 ```
 
 2. Use console.log() to print the penguin's name to the console as part of a welcome message, like "Hello, I'm a penguin and my name is [NAME HERE]!"
 
 ```js
 // your code goes here
+console.log(`Hello, I'm a penguin and my name is ${myPenguin.Name}!`)
+
 ```
 
 3. Write another line of code that adds a new property to your penguin called canFly and set it to false.
 
 ```js
 // your code goes here
+myPenguin.canFly = false;
+
 ```
 
 4. Add a method to your penguin called chirp that prints to the console: "CHIRP CHIRP! Is this what penguins sound like?"
 
 ```js
 // your code goes here
+myPenguin.chirp = function() {
+    console.log("CHIRP CHIRP! Is this what penguins sound like?")
+}
+
 ```
 
 6. Next, call your penguin's sayHello() method and make sure that it works!
 
 ```js
 // your code goes here
+myPenguin.sayHello = function () {
+    console.log(`${myPenguin.name} says Hello!`);
+}
 ```
 
 7. Without modifying any of your previous code, change the penguin's name to "Penguin McPenguinFace" and then call your penguin's sayHello() function one more time to make sure it still works.
 
 ```js
 // your code goes here
+myPenguins.name = "Penguin McPenguinFace";
+myPenguins.sayHello();
 ```
 
 8. Write another method called fly, and inside that method, use an if / else statement to print "I can fly!" to the console if your penguin's canFly property is true, or "No flying for me!" if its canFly property is false.
 
 ```js
 // your code goes here
+myPenguin.fly = function() {
+    if(myPenguin.canFly) {
+        console.log("I can fly!");
+    } else {
+        console.log("No flying for me!")
+    }
+}
+
 ```
 
 9. Call your penguin's fly() method and make sure it works!
 
 ```js
 // your code goes here
+myPenguin.fly();
+
 ```
 
 10. Change the canFly property to true -- again, without modifying any of your previous code!
 
 ```js
 // your code goes here
+myPenguin.canFly = true;
+
 ```
 
 11. Now call your penguin's fly() method again and make sure it works as expected!
 
 ```js
 // your code goes here
+myPenguin.fly();
 ```
 
 12. Write a for ... in loop to print each key to the console.
 
 ```js
 // your code goes here
+
+for (let key in myPenguin) {
+    console.log(`${key}`);
+}
 ```
 
 13. Write another for ... in loop to print the value of each key to the console. (Hint: You'll need to use bracket notation to access the values this way, instead of dot notation!)
 
 ```js
 // your code goes here
+for (let key in myPenguin) {
+    console.log(`${myPenguin[key]});
+}
 ```
 
 ## Exercise 2
@@ -84,6 +123,28 @@
 
 ```js
 // your code goes here
+let recipe = {
+    title : "Gulabjamun",
+    servings : 5,
+    ingredients : ["sugar","milk","water","cardamom seeds","saffron","Baking Soda","khawa grated"]
+
+
+}
+
+for (let key in recipe) {
+    switch(key) {
+        case "title" : console.log(recipe.title);
+        break;
+
+        case "servings" : console.log(`${key} : ${recipe[key]}`);
+        break;
+
+        default : console.log(`${key}:`);
+          for ( i= 0; i <= recipe[key].length -1; i++) {
+              console.log(recipe[key][i]);
+          }
+    }
+}
 ```
 
  15. Keep track of which books you read and which books you want to read!
@@ -94,4 +155,31 @@
 
  ```js
 // your code goes here
+
+let book1 = {
+    title : "To Have and Have Not",
+    author : "Ernest Hemingway",
+    alreadyRead : false
+}
+
+let book2 = {
+    title : "Norewegian woods",
+    author : "Murakami",
+    alreadyRead : false
+}
+let book3 = {
+    title : "Short Stories",
+    author: "O Henry",
+    alreadyRead : true
+}
+
+let books = [book1, book2, book3];
+
+for (let key of books) {
+    if(key["alreadyRead"]) {
+        console.log(`you already read ${key["title"]}.`);
+    } else {
+        console.log(`you still need to read ${key["title"]} by ${key["author"]}.`)
+    }
+}
 ```
